# ZDKnowledge

./: .gitignore  README.md  start.sh
doc/: README.md  roadmap.md  详细设计文档.md  项目规划方案.md
docker/: docker-compose.yml
docs/: 文本朗诵TTS方案.md
node-server/: .gitignore  package.json
node-server/prisma/: schema.prisma
node-server/scripts/: add-missing-nodes.ts  add-missing-phase2.ts  bulk-questions.ts  generate-questions.ts  migrate-missing-nodes.ts  phase-b-enrichment.ts
node-server/src/: config.ts  index.ts
node-server/src/routes/: dictation-words.ts  dictation.ts  insight.ts  tts.ts
node-server/src/seeders/: _add_subject_col.ts  _check_mysql.ts  _migrate_to_mysql.ts  _schema_check.ts  helpers.ts  index.ts
node-server/src/utils/: ttsCache.ts
scripts/: build-node.sh  build.sh  package.sh  start.sh
server/: pom.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/backend/: package-lock.json  package.json  server.js
src-tauri/backend/prisma/: knowledgepower.db
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx
web/src/api/: dictation.ts  tts.ts
web/src/components/: index.ts
web/src/components/TTS/: TTSButton.tsx  (+1 more)
web/src/hooks/: useSpaceCanvas.ts  useTTS.ts
web/src/pages/: CosmicHome.tsx  GraphPage.tsx  InsightPage.tsx  KnowledgeDetail.css  KnowledgeDetail.tsx  SearchPage.tsx  SettingsPage.tsx
web/src/store/: settingsStore.ts  subjectStore.ts
web/src/types/: constants.ts
web/src/utils/: mathToSpeech.ts  spaceScene.ts  stripHtml.ts
(+108 files in other folders)
